2013-04-10  Sancho Lerena <slerena@artica.es>

	* extras/migrate.sql,
	integria_db.sql: New fields on tdownload to allow external downloads.

	* index.php,
	operation/download/download_external.php: New mode for downloads, external
	which allows to anyone to download a file release if know the link. Useful
	to share files by mail, p.e.

	* operation/side_menu.php,
	operation/main_menu.php: Workorders now is inside the projects menu, removing
	its own menu.

	* operation/projects/project.php,
	operation/projects/project_detail.php: Removed some detail on project listing
	page, giving less info is helpful to show information better.

	* operation/download/browse.php,
	operation/download/manage_cat.php,
	operation/leads/lead_detail.php,
	operation/workorders/wo.php,
	operation/workorders/wo_category.php,
	operation/workorders/wo_files.php: Minor fixes and usability problems.

2013-04-09  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup.php
	  include/functions_config.php
	  include/integria_cron.php: Added parameter
	'months_to_delete_incidents' to setup and
	added function 'delete_incidents' to cron.

2013-04-09  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql: Remove ';'

	* operation/newsletter/issue_creation.php: Remove 'Plain text'.

2013-04-07  Sancho Lerena <slerena@artica.es>

	* operation/companies/company_detail.php: Show only active leads, sorted
	by estimated sale.

	* operation/workorders/wo.php: Fixed ACL check on admins. Added
	search parameters to delete link for usability.

	* operation/leads/lead_detail.php: Improved main view, now can delete 
	or close from the list, for better operation.

	* extras/migrate.sql: Updated more SQL for 3.1 to 4.0 migration.

	* general/header.php: Better style.

	* general/home.php: Fixes issues on agenda -> workorder, and also fixed 
	problems with agenda items.

	* godmode/usuarios/lista_usuarios.php: Last conection time is better shown.

	* images/ack.png
	images/ack_bn.png